# the-perfect-python-project

./: .flake8  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .pre-commit-config.yml  CHANGELOG.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml  setup.cfg  welcome.sh
.github/: dependabot.yml
.theia/: settings.json
tests/: test_python_sample.py  test_the_perfect_python_project.py
the_perfect_python_project/: hello.py
