[tool.poetry]
name = "the-perfect-python-project"
version = "1.0.0"
description = "My idea of a perfect Python project configuration"
authors = ["Ken Erwin <ken@devopslibrary.com>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.2"
pytest = "^5.2"
pre-commit = "^2.7.1"
black = "^20.8b1"
mypy = "^0.800"
flake8 = "^3.8.3"

[tool.poetry.scripts]
hello = "the_perfect_python_project.hello:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
